--- a/mickyplayer2/src/main/res/layout/layout_cotrolview.xml
+++ b/mickyplayer2/src/main/res/layout/layout_cotrolview.xml
@@ -7,7 +7,7 @@
      style="@style/Control_Title_Style"
      android:id="@+id/controlview_title"
      />
-    <android.support.v7.widget.AppCompatImageButton
+    <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
@@ -49,7 +49,7 @@
             android:textColor="@android:color/white"
             android:id="@+id/play_total_time"/>
         <!--放大缩小-->
-        <android.support.v7.widget.AppCompatImageButton
+        <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:src="@drawable/full_small_bg"
