--- a/micplayerlibrary/src/main/res/layout/layout_cotrolview.xml
+++ b/micplayerlibrary/src/main/res/layout/layout_cotrolview.xml
@@ -13,7 +13,9 @@
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:src="@drawable/play_pause_bg"
-        android:id="@+id/btn_control"/>
+        android:id="@+id/btn_control"
+
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
